# Bank_Home_Credit_Task

./: .dockerignore  .gitignore  CV_PARSER_GUIDE.md  Dockerfile  LLM_ANALYZER_README.md  QUICK_COMMANDS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_evaluation.txt  test_llm_analyzer.py
app/: HYBRID_SEARCH_GUIDE.md  SEARCH_MODES.md  TFIDF_PERSISTENCE.md  __init__.py  analysis_examples.py  compare_search_modes.py  evaluate_search.py  load_txt_to_qdrant.py  main.py  process_cvs.py  run_evaluation.py  run_experiments.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/evaluation/: __init__.py  analysis.py  evaluator.py  metrics.py
app/evaluation_results/: detailed_20260205_152217.json  detailed_20260205_153330.json  detailed_20260205_153504.json  metrics_20260205_152217.csv  metrics_20260205_153330.csv  metrics_20260205_153504.csv  (+2 more)
evaluation_results/: detailed_20260206_223914.json  hybrid.json  metrics_20260205_163033.csv  metrics_20260205_163215.csv  metrics_20260205_205711.csv  metrics_20260205_205805.csv  metrics_20260206_184424.csv  metrics_20260206_223522.csv  metrics_20260206_223914.csv  metrics_20260206_224542.csv  metrics_20260206_225511.csv  ml_classifier_0_2.json  ml_classifier_20260206_093849.csv  ml_classifier_20260206_095024.csv  only_TD_IDF.json
metrics/: gemini_001_3072.json  ml_classifier_01.json  only_BM25.json  voyage-4-large-1024.json  voyage_4_large_BM25.json
research/: CV_parser.ipynb  PDF_parsing_metric_calculate.ipynb  TF_IDF_test.ipynb
scripts/: run_email_watcher.py
(+94 files in other folders)
