[project]
name = "bank-home-credit-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flagembedding>=1.3.5",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langchain-voyageai>=0.3.2",
    "llama-parse>=0.6.92",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
]
