[project]
name = "bank-home-credit-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "flagembedding>=1.3.5",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langchain-voyageai>=0.3.2",
    "llama-parse>=0.6.92",
    "matplotlib>=3.10.8",
    "plotly>=6.0.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.0",
    "uvicorn>=0.34.0",
]
